--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-sanitize": ">=1.2.*",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.15",
+    "angular-xeditable": "~0.1.9",
     "bootstrap": "~3.1.1",
     "bootstrap-sass-official": "~3.1.1",
     "es5-shim": "~3.0.1",
