--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "font-awesome": ">=4.1.0",
     "json3": "~3.3.1",
     "lodash": "~2.4.1",
+    "restangular": "~1.5.1",
     "roboto-fontface": "~0.4.3"
   },
   "devDependencies": {
