--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-bootstrap": "~0.11.0",
     "angular-cookies": ">=1.2.*",
     "angular-material": "~0.11.4",
+    "angular-material-data-table": "~0.8.14",
     "angular-resource": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-socket-io": "~0.6.0",
