--- a/bower.json
+++ b/bower.json
@@ -5,19 +5,20 @@
     "angular": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
     "angular-cookies": ">=1.2.*",
+    "angular-inline-text-editor": "~0.3.14",
     "angular-material": "~0.11.4",
     "angular-material-data-table": "~0.8.14",
     "angular-resource": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.15",
-    "angular-xeditable": "~0.1.9",
     "bootstrap": "~3.1.1",
     "bootstrap-sass-official": "~3.1.1",
     "es5-shim": "~3.0.1",
     "font-awesome": ">=4.1.0",
     "json3": "~3.3.1",
     "lodash": "~2.4.1",
+    "rangy": "~1.3.0",
     "restangular": "~1.5.1",
     "roboto-fontface": "~0.4.3"
   },
