--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "lodash": "~2.4.1",
     "rangy": "~1.3.0",
     "restangular": "~1.5.1",
-    "roboto-fontface": "~0.4.3"
+    "roboto-fontface": "~0.4.3",
+    "angular-gettext": "angular-gettext#~2.2.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
