--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "~4.0.3",
     "mongoose-id-validator": "^0.1.9",
     "morgan": "~1.0.0",
+    "multer": "^1.1.0",
     "passport": "~0.2.0",
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
