--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "rangy": "~1.3.0",
     "restangular": "~1.5.1",
     "roboto-fontface": "~0.4.3",
-    "angular-gettext": "angular-gettext#~2.2.0"
+    "angular-gettext": "angular-gettext#~2.2.0",
+    "ng-file-upload": "~11.0.2",
+    "ng-img-crop": "ngImgCrop#~0.3.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
