--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "roboto-fontface": "~0.4.3",
     "angular-gettext": "angular-gettext#~2.2.0",
     "ng-file-upload": "~11.0.2",
-    "ng-img-crop": "ngImgCrop#~0.3.2"
+    "ng-img-crop": "ngImgCrop#~0.3.2",
+    "ngQuill":"https://github.com/cphyc/ngQuill.git"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
