--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compression": "~1.0.1",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "~1.0.1",
+    "csv-stringify": "0.0.8",
     "errorhandler": "~1.0.0",
     "express": "~4.9.0",
     "express-jwt": "^3.0.0",
@@ -28,6 +29,7 @@
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
     "socketio-jwt": "^3.0.0",
+    "uid": "0.0.2",
     "unoconv2": "^1.0.0"
   },
   "devDependencies": {
