--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "ng-file-upload": "~11.0.2",
     "ng-img-crop": "ngImgCrop#~0.3.2",
     "ngQuill": "https://github.com/cphyc/ngQuill.git",
-    "FileSaver": "*"
+    "FileSaver": "*",
+    "q": "1.0.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
