--- a/bower.json
+++ b/bower.json
@@ -23,10 +23,10 @@
     "roboto-fontface": "~0.4.3",
     "angular-gettext": "angular-gettext#~2.2.0",
     "ng-file-upload": "~11.0.2",
-    "ng-img-crop": "ngImgCrop#~0.3.2",
     "ngQuill": "https://github.com/cphyc/ngQuill.git",
     "FileSaver": "*",
-    "q": "1.0.1"
+    "q": "1.0.1",
+    "ng-cropper": "^0.4.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
