--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "eduquizz",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.2.*",
+    "angular": "~1.5",
+    "angular-animate": "~1.5",
     "angular-bootstrap": "~0.11.0",
     "angular-cookies": ">=1.2.*",
     "angular-inline-text-editor": "~0.3.14",
@@ -33,6 +34,6 @@
     "angular-scenario": ">=1.2.*"
   },
   "resolutions": {
-    "angular": ">1.2.0"
+    "angular": "1.5.0"
   }
 }
