--- a/bower.json
+++ b/bower.json
@@ -18,16 +18,16 @@
     "es5-shim": "~3.0.1",
     "font-awesome": ">=4.1.0",
     "json3": "~3.3.1",
-    "lodash": "~2.4.1",
     "rangy": "~1.3.0",
-    "restangular": "~1.5.1",
     "roboto-fontface": "~0.4.3",
     "angular-gettext": "angular-gettext#~2.2.0",
     "ng-file-upload": "~11.0.2",
     "ngQuill": "https://github.com/cphyc/ngQuill.git",
     "FileSaver": "*",
     "q": "1.0.1",
-    "ng-cropper": "^0.4.1"
+    "ng-cropper": "^0.4.1",
+    "restangular": "^1.5.2",
+    "lodash": "^4.4.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
