not private anymore!

--- a/package.json
+++ b/package.json
@@ -102,5 +102,5 @@
     "test": "node node_modules/grunt-cli/bin/grunt test",
     "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
   },
-  "private": true
+  "private": false
 }
