--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "grunt-google-cdn": "~0.4.0",
     "grunt-injector": "~0.5.4",
     "grunt-karma": "~0.8.2",
+    "grunt-mkdir": "^1.0.0",
     "grunt-mocha-test": "~0.10.2",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
