--- a/package.json
+++ b/package.json
@@ -3,96 +3,95 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "body-parser": "~1.5.0",
+    "body-parser": "~1.19.0",
     "composable-middleware": "^0.3.0",
-    "compression": "~1.0.1",
-    "connect-mongo": "^0.8.1",
-    "cookie-parser": "~1.0.1",
-    "csv-stringify": "0.0.8",
-    "errorhandler": "~1.0.0",
-    "express": "~4.9.0",
-    "express-jwt": "^3.0.0",
-    "express-session": "~1.0.2",
-    "jade": "~1.2.0",
-    "jsonwebtoken": "^5.0.0",
-    "lodash": "~2.4.1",
-    "method-override": "~1.0.0",
-    "mongoose": "~4.0.3",
-    "mongoose-id-validator": "^0.1.9",
-    "morgan": "~1.0.0",
-    "multer": "^1.1.0",
-    "passport": "~0.2.0",
+    "compression": "~1.7.4",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "~1.4.4",
+    "csv-stringify": "5.3.0",
+    "errorhandler": "~1.5.0",
+    "express": "~4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-session": "~1.16.1",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": ">=4.17.11",
+    "method-override": "~3.0.0",
+    "mongoose": "~5.5.4",
+    "mongoose-id-validator": "^0.5.3",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.1",
+    "passport": "~0.4.0",
     "passport-google-oauth": "latest",
-    "passport-local": "~0.1.6",
-    "q": "^1.4.1",
-    "serve-favicon": "~2.0.1",
-    "socket.io": "^1.0.6",
-    "socket.io-client": "^1.0.6",
-    "socketio-jwt": "^3.0.0",
+    "passport-local": "~1.0.0",
+    "q": "^1.5.1",
+    "serve-favicon": "~2.5.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
+    "socketio-jwt": "^4.5.0",
     "uid": "0.0.2",
     "unoconv2": "^1.0.0"
   },
   "devDependencies": {
-    "bower": "^1.7.7",
-    "connect-livereload": "~0.4.0",
-    "grunt": "~0.4.4",
-    "grunt-angular-gettext": "^2.1.11",
-    "grunt-angular-templates": "^0.5.4",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-babel": "~5.0.0",
-    "grunt-build-control": "~0.4.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-imagemin": "~0.7.1",
-    "grunt-contrib-jade": "^0.11.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "bower": "^1.8.8",
+    "connect-livereload": "~0.6.1",
+    "grunt": "~1.0.4",
+    "grunt-angular-gettext": "^2.4.1",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-babel": "~8.0.0",
+    "grunt-build-control": "~0.7.1",
+    "grunt-cli": "^1.3.2",
+    "grunt-concurrent": "~2.3.1",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~3.0.0",
+    "grunt-contrib-htmlmin": "~3.1.0",
+    "grunt-contrib-imagemin": "~3.1.0",
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-jshint": "~2.1.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "~4.0.1",
+    "grunt-contrib-watch": "~1.1.0",
     "grunt-dom-munger": "^3.4.0",
-    "grunt-env": "~0.4.1",
-    "grunt-express-server": "~0.4.17",
-    "grunt-google-cdn": "~0.4.0",
-    "grunt-injector": "~0.5.4",
-    "grunt-karma": "~0.8.2",
+    "grunt-env": "~0.4.4",
+    "grunt-express-server": "~0.5.4",
+    "grunt-google-cdn": "~0.4.3",
+    "grunt-injector": "~1.1.0",
+    "grunt-karma": "~3.0.2",
     "grunt-mkdir": "^1.0.0",
-    "grunt-mocha-test": "~0.10.2",
-    "grunt-newer": "~0.7.0",
-    "grunt-ng-annotate": "^0.2.3",
-    "grunt-node-inspector": "~0.1.5",
-    "grunt-nodemon": "~0.2.0",
-    "grunt-open": "~0.2.3",
-    "grunt-protractor-runner": "^1.1.0",
+    "grunt-mocha-test": "~0.13.3",
+    "grunt-newer": "~1.3.0",
+    "grunt-ng-annotate": "^3.0.0",
+    "grunt-nodemon": "~0.4.2",
+    "grunt-open": "~0.2.4",
+    "grunt-protractor-runner": "^5.0.0",
     "grunt-rev": "~0.1.0",
-    "grunt-svgmin": "~0.4.0",
-    "grunt-usemin": "~2.1.1",
-    "grunt-wiredep": "~1.8.0",
-    "jit-grunt": "^0.5.0",
-    "jshint-stylish": "~0.1.5",
-    "karma": "~0.12.9",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-chrome-launcher": "~0.1.3",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
+    "grunt-svgmin": "~6.0.0",
+    "grunt-usemin": "~3.1.1",
+    "grunt-wiredep": "~3.0.1",
+    "jit-grunt": "^0.10.0",
+    "jshint-stylish": "~2.2.1",
+    "karma": "~4.1.0",
+    "karma-babel-preprocessor": "^8.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coffee-preprocessor": "~1.0.1",
+    "karma-firefox-launcher": "~1.1.0",
+    "karma-html2js-preprocessor": "~1.1.0",
     "karma-jade-preprocessor": "0.0.11",
-    "karma-jasmine": "~0.1.5",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-requirejs": "~0.2.1",
-    "karma-script-launcher": "~0.1.0",
-    "open": "~0.0.4",
-    "requirejs": "~2.1.11",
-    "should": "~3.3.1",
-    "supertest": "~0.11.0",
-    "time-grunt": "~0.3.1"
+    "karma-jasmine": "~2.0.1",
+    "karma-ng-html2js-preprocessor": "~1.0.0",
+    "karma-ng-jade2js-preprocessor": "^0.2.1",
+    "karma-ng-scenario": "~1.0.0",
+    "karma-phantomjs-launcher": "~1.0.4",
+    "karma-requirejs": "~1.1.0",
+    "karma-script-launcher": "~1.0.0",
+    "open": "~6.2.0",
+    "requirejs": "~2.3.6",
+    "should": "~13.2.3",
+    "supertest": "~4.0.2",
+    "time-grunt": "~2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
