--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": ">=4.17.11",
     "method-override": "~3.0.0",
-    "mongoose": "~5.5.4",
+    "mongoose": "^4.13.18",
     "mongoose-id-validator": "^0.5.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
@@ -39,7 +39,7 @@
     "grunt-angular-gettext": "^2.4.1",
     "grunt-angular-templates": "^1.1.0",
     "grunt-autoprefixer": "~3.0.4",
-    "grunt-babel": "~8.0.0",
+    "grunt-babel": "~5.0.0",
     "grunt-build-control": "~0.7.1",
     "grunt-cli": "^1.3.2",
     "grunt-concurrent": "~2.3.1",
@@ -57,7 +57,7 @@
     "grunt-dom-munger": "^3.4.0",
     "grunt-env": "~0.4.4",
     "grunt-express-server": "~0.5.4",
-    "grunt-google-cdn": "~0.4.3",
+    "grunt-google-cdn2": "^0.6.0",
     "grunt-injector": "~1.1.0",
     "grunt-karma": "~3.0.2",
     "grunt-mkdir": "^1.0.0",
@@ -74,7 +74,7 @@
     "jit-grunt": "^0.10.0",
     "jshint-stylish": "~2.2.1",
     "karma": "~4.1.0",
-    "karma-babel-preprocessor": "^8.0.0",
+    "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coffee-preprocessor": "~1.0.1",
     "karma-firefox-launcher": "~1.1.0",
