--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "eduquizz",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.5",
+    "angular": "~1.5.8",
     "angular-animate": "~1.5",
     "angular-bootstrap": "~0.11.0",
-    "angular-cookies": ">=1.2.*",
+    "angular-cookies": "~1.5.8",
     "angular-inline-text-editor": "~0.3.14",
     "angular-material": "~0.11.4",
     "angular-material-data-table": "~0.8.14",
-    "angular-resource": ">=1.2.*",
-    "angular-sanitize": ">=1.2.*",
+    "angular-resource": "~1.5.8",
+    "angular-sanitize": "~1.5.8",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.1.1",
     "bootstrap-sass-official": "~3.1.1",
     "es5-shim": "~3.0.1",
-    "font-awesome": ">=4.1.0",
+    "font-awesome": "~4.1.0",
     "json3": "~3.3.1",
     "rangy": "~1.3.0",
     "roboto-fontface": "~0.4.3",
@@ -27,13 +27,15 @@
     "q": "1.0.1",
     "ng-cropper": "^0.4.1",
     "restangular": "^1.5.2",
-    "lodash": "^4.4.0"
+    "lodash": "^4.4.0",
+    "angular-aria": "1.5.8",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
-    "angular-mocks": ">=1.2.*",
-    "angular-scenario": ">=1.2.*"
+    "angular-mocks": "~1.2.*",
+    "angular-scenario": "~1.2.*"
   },
   "resolutions": {
-    "angular": "~1.5"
+    "angular": "1.5.8"
   }
 }
