--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.4",
     "csv-stringify": "5.3.0",
+    "each-async": "1.1.1",
     "errorhandler": "~1.5.0",
     "express": "~4.16.4",
     "express-jwt": "^5.3.1",
