--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "grunt-dom-munger": "^3.4.0",
     "grunt-env": "~0.4.4",
     "grunt-express-server": "~0.5.4",
+    "grunt-filerev": "^2.3.1",
     "grunt-google-cdn2": "^0.6.0",
     "grunt-injector": "~1.1.0",
     "grunt-karma": "~3.0.2",
